# hackathon-0

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  Personal AI Employee Hackathon 0_ Building Autonomous FTEs in 2026.docx  README.md  main.py  orchestrator.py  pyproject.toml  setup_scheduler.ps1
.claude/: settings.local.json
.claude/skills/process-inbox-skill/: SKILL.md
.claude/skills/process-inbox-skill/scripts/: main.py
.claude/skills/silver-inbox-skill/: SKILL.md
.claude/skills/silver-inbox-skill/scripts/: main.py
mcps/: email_mcp.py
obsidian_vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_poster.py  whatsapp_watcher.py
